# agentictrust

./: .gitignore  AGENT_AUTHORIZATION.md  AUTH0_INTEGRATION.md  FRONTEND_MIGRATION.md  LICENSE  Makefile  README.md  README_UPDATED.md  config.py  pyproject.toml  requirements.txt  run.py  start-dev.sh
.cursor/rules/: prd.mdc
.plan/: agent_launch_modes_plan.md  cisco_workspan_scope_policy_plan.md  current_work.md  demo.md  gap_analysis_checklist.md  scopes_policies.md  support_tools_for_demo.md
agentictrust/: __init__.py  client.py  config.py  descriptor.py  helpers.py  host_env.py  http_client.py  log_config.py  main.py  meta_client.py  session.py
app/: __init__.py  config.py  main.py
app/core/: __init__.py  (+2 more)
configs/: api.yml  flask.yml  logging.yml  scopes.yml
data/: policies.yml  scopes.yml  users.yml
demo/: agent.py  agent_tools.py  agents.py  crew.py  crewai_example.py  database.md  docker-compose.yml  happy_path_scenarios.py  main.py  multi_hop_scenarios.py  partner_data_workflow.py  requirements.txt  support_server.py  support_tools.py
docs/: AUTH0_INTEGRATION.md  README.md  access_control_examples.md  app_documentation.md  blog.md  delegation.md  granular-oauth-scope-strategy.md  oauth_flow_diagram.md  oidc-a-proposal.md
frontend/: README.md  package-lock.json  package.json
platform/: .env.local  README.md  package-lock.json  package.json
policies/: agent_policies.rego  authorization.rego  decision_policies.rego  delegation_policies.rego  scope_policies.rego  tool_policies.rego
scripts/: setup-poetry.sh
sdk/: __init__.py  client.py  config.py  delegations.py  exceptions.py  policies.py  scopes.py  security.py  tokens.py
tests/: README.md  __init__.py  conftest.py  mock_issued_token.py  mock_utils.py  pytest.ini  test_agents.py  test_auth0_authentication.py  test_auth0_integration.py  test_delegation_audit.py  test_delegation_policy.py  test_human_agent_delegation.py  test_integration.py  test_mfa.py  test_oauth_engine.py  test_policy_engine.py  test_rbac.py  test_scope_engine.py  test_sdk_client.py  test_tools.py  test_user_agent_authorization.py  test_user_auth0.py  test_users.py
(+295 files in other folders)
