[tool.poetry]
name = "agentictrust"
version = "0.1.0"
description = "Secure OAuth Framework for LLM-Based Agents"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.3"
flask-sqlalchemy = "3.1.1"
flask-migrate = "4.0.5"
flask-cors = "4.0.0"
pyjwt = "2.8.0"
requests = "2.31.0"
python-dotenv = "1.0.0"
werkzeug = "2.3.7"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88 